rename to "segmentize" and "segments"
rename "TssData" method to "segmentize"
rename "regions" slot to "segments"
rename "regions" method to "segments"
remane ".regionize" function to ".breakInSegments"

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,11 +10,11 @@ exportClasses(TssData)
 exportClasses(TssNorm)
 exportClasses(TssResult)
 
-exportMethods(TssData)
+exportMethods(segmentize)
 exportMethods(normalize)
 exportMethods(identify)
 
-exportMethods(reads, regions, tss, parameters, timestamp, annotation)
+exportMethods(reads, segments, tss, parameters, timestamp, annotation)
 exportMethods(start, end, counts, ratio, fit, expect)
 exportMethods(show, names)
 
