--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,7 @@ exportMethods(segmentize)
 exportMethods(normalize)
 exportMethods(identify)
 
-exportMethods(reads, segments, tss, parameters, timestamp, annotation)
+exportMethods(reads, segments, tss, parameters, timestamp, annotation, "[")
 exportMethods(start, end, counts, ratio, fit, expect)
 exportMethods(show, names)
 
