--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,9 @@ Version: 0.3.3
 Date: 2011-06-03
 Author: Clemens Kreutz, Julian Gehring
 Maintainer: Julian Gehring <julian.gehring@fdm.uni-freiburg.de>
-Imports: methods, Hmisc, minqa, stats, Biobase
+Imports: methods, Hmisc, minqa, stats, Biobase, plyr, IRanges
 Depends: R (>= 2.12.0)
+Suggests: rtracklayer
 Enhances: multicore
 Description: Identify Transcription Start Sites in Sequencing Data
 License: GPL-3
