remove generics defined in standard packages

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ import(methods)
 importFrom(graphics, plot, points, lines, rug, abline)
 importFrom(Hmisc, approxExtrap)
 importFrom(minqa, bobyqa)
-importFrom(stats, optimize, optim, convolve, dpois)
+importFrom(stats, optimize, optim, convolve, dpois, start, end)
 importFrom(Biobase, selectSome)
 importFrom(plyr, rbind.fill)
 importFrom(IRanges, IRanges, RangedData, Rle)
