--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,17 @@
 Package: TSSi
 Type: Package
 Title: Transcription Start Site Identification
-Version: 0.99.0
-Date: 2011-08-01
+Version: 0.99.1
+Date: 2011-09-15
 Author: Clemens Kreutz, Julian Gehring
 Maintainer: Julian Gehring <julian.gehring@fdm.uni-freiburg.de>
 Imports: methods, Hmisc, minqa, stats, Biobase, plyr, IRanges
 Depends: R (>= 2.12.0)
 Suggests: rtracklayer
 Enhances: multicore
-Description: Identify and normalize transcription start sites in high-throughput sequencing data
+Description: Identify and normalize transcription start sites in high-throughput sequencing data.
 License: GPL-3
 LazyLoad: yes
 Encoding: UTF-8
+URL: http://julian-gehring.github.com/TSSi/
 biocViews: Sequencing, HighThroughputSequencing, RNAseq, Genetics, Preprocessing
