--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,7 +22,7 @@ exportMethods(segmentize)
 exportMethods(normalize)
 exportMethods(identify)
 
-exportMethods(reads, segments, tss, parameters, timestamp, annotation, "[")
+exportMethods(reads, segments, tss, parameters, annotation, "[")
 exportMethods(start, end, counts, ratio, fit, expect)
 exportMethods(show, names)
 exportMethods(readsAsRangedData, segmentsAsRangedData, tssAsRangedData)
