--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: TSSi
 Type: Package
 Title: Transcription Start Site Identification
-Version: 0.99.5
-Date: 2011-10-04
+Version: 0.99.6
+Date: 2011-10-07
 Author: Clemens Kreutz, Julian Gehring
-Maintainer: Julian Gehring <julian.gehring@fdm.uni-freiburg.de>
+Maintainer: Julian Gehring <julian.gehring@embl.de>
 Imports: methods, Hmisc, minqa, stats, Biobase, plyr, IRanges
 Depends: R (>= 2.12.0)
 Suggests: rtracklayer
