Fix IRanges import in namespace

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,13 +5,13 @@ Version: 1.13.0
 Date: 2013-07-26
 Author: Clemens Kreutz, Julian Gehring
 Maintainer: Julian Gehring <julian.gehring@embl.de>
-Depends: R (>= 2.13.2), BiocGenerics (>= 0.3.2), IRanges
-Imports: methods, BiocGenerics, S4Vectors, Hmisc, minqa, stats, Biobase (>=
-        0.3.2), plyr, IRanges
+Depends: R (>= 2.13.2)
+Imports: methods, BiocGenerics (>= 0.3.2), S4Vectors, Hmisc, minqa, stats,
+	 Biobase (>= 0.3.2), plyr, IRanges
 Suggests: rtracklayer
 Enhances: parallel
 Description: Identify and normalize transcription start sites in
-        high-throughput sequencing data.
+             high-throughput sequencing data.
 License: GPL-3
 LazyLoad: yes
 URL: http://julian-gehring.github.com/TSSi/
